--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f4f4f4;
+}
+
+.submit{
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(0, 110, 255);
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+.submit:hover{
+    background-color: rgb(0, 80, 185);
+    cursor: pointer;
+}
+
+.delete{
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(247, 65, 41);
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+.delete:hover{
+    background-color: rgb(245, 61, 15);
+    cursor: pointer;
+}
+
+.unblock{
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(247, 158, 41);
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+.unblock:hover{
+    background-color: rgb(245, 126, 15);
+    cursor: pointer;
+}
